// Database Schema for Security Master Service
// Generated from SQLAlchemy models for Portfolio Performance and Kubera integration

Project SecurityMaster {
  database_type: 'PostgreSQL'
  Note: '''
    Security Master Service for Portfolio Performance (PP)
    Centralized asset classification and taxonomy management
    Compares PP holdings with Kubera real-time data
  '''
}

Table securities_master {
  id integer [pk, increment]
  name varchar(255) [not null, note: 'Security name']
  isin varchar(12) [unique, note: 'International Securities Identification Number']
  symbol varchar(20) [note: 'Trading symbol/ticker']
  wkn varchar(20) [note: 'German securities identifier']
  note text [note: 'Additional notes']
  currency varchar(3) [not null, default: 'USD']
  
  // Pricing data
  latest_price decimal(12,4) [note: 'Current market price']
  delta_percent decimal(8,4) [note: 'Price change percentage']
  delta_amount decimal(12,4) [note: 'Price change amount']
  latest_date date [note: 'Date of latest price']
  last_historical_date date
  first_historical_date date
  
  // Data feeds
  quote_feed_historic varchar(100) [note: 'Historical data source']
  quote_feed_latest varchar(100) [note: 'Latest price data source']
  url_historic_quotes varchar(500)
  url_latest_quotes varchar(500)
  
  // Corporate actions
  next_ex_date date [note: 'Next ex-dividend date']
  next_payment_date date [note: 'Next dividend payment date']
  next_payment_amount decimal(12,4) [note: 'Next dividend amount']
  
  // Fund/ETF specific
  logo varchar(500)
  ter decimal(6,4) [note: 'Total Expense Ratio']
  aum decimal(15,2) [note: 'Assets Under Management']
  vendor varchar(100) [note: 'Fund company/vendor']
  acquisition_fee decimal(6,4)
  management_fee decimal(6,4)
  
  // Asset Classifications
  asset_classes_level1 varchar(100) [note: 'Top-level asset class']
  asset_classes varchar(200) [note: 'Detailed asset classes']
  sector varchar(100) [note: 'Industry sector']
  industry_group varchar(100)
  industry varchar(100)
  
  // GICS Classifications
  industries_gics_level4 varchar(200) [note: 'GICS Level 4 industries']
  industries_gics varchar(200) [note: 'All GICS industries']
  industries_gics_sectors_level1 varchar(100) [note: 'GICS top-level sectors']
  industries_gics_sectors varchar(200) [note: 'All GICS sectors']
  
  // Asset Allocation
  asset_allocation_level1 varchar(100)
  asset_allocation_level2 varchar(100)
  asset_allocation varchar(200)
  
  // Geographic Classifications
  market varchar(100) [note: 'Primary trading market']
  region varchar(100) [note: 'Geographic region']
  regions_msci_level3 varchar(100) [note: 'MSCI Level 3 regions']
  regions_msci varchar(200) [note: 'All MSCI regions']
  
  // Security Type Classifications
  type_of_security_level1 varchar(100) [note: 'Top-level security type']
  type_of_security varchar(200) [note: 'Detailed security type']
  
  // Custom Classifications (BRX-Plus taxonomy)
  brx_plus_level1 varchar(100) [note: 'Byron custom Level 1']
  brx_plus_level2 varchar(100) [note: 'Byron custom Level 2']
  brx_plus varchar(200) [note: 'Byron custom full taxonomy']
  
  // Audit fields
  created_at timestamp [default: `now()`, note: 'Record creation timestamp']
  updated_at timestamp [default: `now()`, note: 'Last update timestamp']
  data_source varchar(50) [default: 'portfolio_performance', note: 'Source system']
  data_quality_score decimal(3,2) [note: 'Data completeness score 0.00-1.00']
  
  indexes {
    (name) [name: 'idx_securities_name']
    (isin) [name: 'idx_securities_isin']
    (symbol) [name: 'idx_securities_symbol']
    (wkn) [name: 'idx_securities_wkn']
    (sector) [name: 'idx_securities_sector']
    (type_of_security_level1) [name: 'idx_securities_type']
  }
}

Table kubera_sheets {
  id integer [pk, increment]
  sheet_id varchar(50) [unique, not null, note: 'Kubera sheet UUID']
  sheet_name varchar(100) [not null, note: 'Sheet display name (e.g. IRA, Crypto)']
  pp_group_name varchar(100) [note: 'Mapped Portfolio Performance group']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    (sheet_name) [name: 'idx_kubera_sheets_name']
    (pp_group_name) [name: 'idx_kubera_sheets_pp_group']
  }
}

Table kubera_sections {
  id integer [pk, increment]
  section_id varchar(50) [unique, not null, note: 'Kubera section UUID']
  section_name varchar(100) [not null, note: 'Section name (e.g. Wells Fargo, Interactive Brokers)']
  sheet_id integer [ref: > kubera_sheets.id, not null]
  pp_account_name varchar(100) [note: 'Mapped Portfolio Performance account']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    (section_name) [name: 'idx_kubera_sections_name']
    (pp_account_name) [name: 'idx_kubera_sections_pp_account']
  }
}

Table kubera_holdings {
  id integer [pk, increment]
  kubera_asset_id varchar(100) [unique, not null, note: 'Kubera asset UUID']
  name varchar(255) [not null, note: 'Security name from Kubera']
  section_id integer [ref: > kubera_sections.id, not null]
  
  // Security identifiers
  ticker varchar(20) [note: 'Trading symbol']
  ticker_id integer [note: 'Kubera internal ticker ID']
  isin varchar(12) [note: 'ISIN from Kubera']
  
  // Classification
  category varchar(50) [not null, note: 'asset or liability']
  sub_type varchar(50) [not null, note: 'stock, mutual fund, etf, cash']
  ticker_sub_type varchar(20) [note: 'cs, etf, oef, scr']
  asset_class varchar(50) [not null, note: 'stock, fund, cash, crypto']
  security_type varchar(50) [not null, note: 'investment, other']
  
  // Market data
  exchange varchar(50) [note: 'Trading exchange']
  sector varchar(100) [note: 'Industry sector']
  ticker_sector varchar(100) [note: 'Kubera sector classification']
  
  // Position data
  quantity decimal(18,8) [not null, note: 'Number of shares/units']
  current_price decimal(12,4) [note: 'Current market price per share']
  current_value decimal(15,2) [not null, note: 'Total current market value']
  currency varchar(3) [not null, default: 'USD']
  
  // Cost basis
  cost_per_share decimal(12,4) [note: 'Average cost per share']
  cost_basis_total decimal(15,2) [note: 'Total cost basis']
  cost_basis_for_tax decimal(15,2) [note: 'Tax-adjusted cost basis']
  
  // Performance metrics
  irr decimal(12,6) [note: 'Internal Rate of Return']
  unrealized_gain_loss decimal(15,2) [note: 'Unrealized gain/loss']
  tax_on_unrealized_gain decimal(15,2) [note: 'Tax liability on gains']
  
  // Dates
  purchase_date date [note: 'Original purchase date']
  holding_period_days integer [note: 'Days since purchase']
  
  // Tax information
  tax_rate decimal(5,2) [note: 'Tax rate percentage']
  tax_status varchar(20) [note: 'taxable, tax-deferred, etc.']
  
  // Geographic and liquidity
  geography_country varchar(50) [note: 'Country of domicile']
  geography_region varchar(50) [note: 'Geographic region']
  liquidity varchar(20) [note: 'high, medium, low']
  investable varchar(50) [note: 'investable_easy_convert, investable_cash']
  ownership decimal(3,2) [default: 1.0, note: 'Ownership percentage']
  
  // Data connection info
  aggregator varchar(50) [note: 'finicity, yodlee, manual']
  provider_name varchar(100) [note: 'Financial institution name']
  provider_account_id varchar(50) [note: 'Provider account ID']
  provider_connection_id varchar(50) [note: 'Provider connection ID']
  last_updated timestamp [note: 'Last data update from provider']
  
  // Manual data flag
  is_manual boolean [default: false, note: 'Manually entered data']
  holdings_count integer [default: 0, note: 'Child holdings count for accounts']
  
  // Parent relationship (for account summaries)
  parent_id varchar(100) [note: 'Parent account ID']
  parent_name varchar(255) [note: 'Parent account name']
  
  // Snapshot metadata
  snapshot_date date [not null, note: 'Date of data snapshot']
  data_source varchar(50) [default: 'kubera']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    (name) [name: 'idx_kubera_holdings_name']
    (ticker) [name: 'idx_kubera_holdings_ticker']
    (isin) [name: 'idx_kubera_holdings_isin']
    (sub_type) [name: 'idx_kubera_holdings_subtype']
    (asset_class) [name: 'idx_kubera_holdings_asset_class']
    (sector) [name: 'idx_kubera_holdings_sector']
    (snapshot_date) [name: 'idx_kubera_holdings_snapshot']
  }
}

Table holding_comparisons {
  id integer [pk, increment]
  comparison_date date [not null, note: 'Date of comparison run']
  pp_group varchar(100) [not null, note: 'Portfolio Performance group']
  pp_account varchar(100) [not null, note: 'Portfolio Performance account']
  
  // Security identification
  security_name varchar(255) [not null, note: 'Security name for comparison']
  isin varchar(12) [note: 'ISIN for matching']
  ticker varchar(20) [note: 'Ticker for matching']
  
  // Portfolio Performance data
  pp_quantity decimal(18,8) [note: 'PP quantity']
  pp_value decimal(15,2) [note: 'PP total value']
  pp_currency varchar(3) [note: 'PP currency']
  
  // Kubera data
  kubera_quantity decimal(18,8) [note: 'Kubera quantity']
  kubera_value decimal(15,2) [note: 'Kubera total value']
  kubera_currency varchar(3) [note: 'Kubera currency']
  
  // Variance analysis
  quantity_variance decimal(18,8) [note: 'Quantity difference (Kubera - PP)']
  quantity_variance_percent decimal(8,4) [note: 'Quantity variance percentage']
  value_variance decimal(15,2) [note: 'Value difference (Kubera - PP)']
  value_variance_percent decimal(8,4) [note: 'Value variance percentage']
  
  // Status flags
  is_matched boolean [default: false, note: 'Holdings match within tolerance']
  is_pp_only boolean [default: false, note: 'Only exists in Portfolio Performance']
  is_kubera_only boolean [default: false, note: 'Only exists in Kubera']
  variance_threshold_exceeded boolean [default: false, note: 'Variance exceeds tolerance']
  
  // Tolerance settings used
  quantity_tolerance_percent decimal(5,2) [default: 0.01, note: 'Quantity tolerance %']
  value_tolerance_percent decimal(5,2) [default: 0.50, note: 'Value tolerance %']
  
  // Notes and investigation
  notes text [note: 'Investigation notes']
  investigation_status varchar(50) [default: 'pending', note: 'pending, investigating, resolved']
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    (comparison_date) [name: 'idx_comparisons_date']
    (pp_group) [name: 'idx_comparisons_pp_group']
    (pp_account) [name: 'idx_comparisons_pp_account']
    (isin) [name: 'idx_comparisons_isin']
    (ticker) [name: 'idx_comparisons_ticker']
    (is_matched) [name: 'idx_comparisons_matched']
    (is_pp_only) [name: 'idx_comparisons_pp_only']
    (is_kubera_only) [name: 'idx_comparisons_kubera_only']
    (variance_threshold_exceeded) [name: 'idx_comparisons_variance']
  }
}

// Relationships and Notes
Note: "Securities Master contains all Portfolio Performance securities with complete taxonomy classification"
Note: "Kubera Holdings captures real-time position data from client aggregated accounts"
Note: "Holding Comparisons provides variance analysis between PP and Kubera for data quality validation"
Note: "Sheet/Section mapping enables flexible Portfolio Performance group/account alignment"
